fix map layout issues

--- a/styles/MapPage.module.scss
+++ b/styles/MapPage.module.scss
@@ -98,7 +98,7 @@
     transition: all 300ms;
   }
   .sidebarContainer {
-    max-width: 370px;
+    max-width: 410px;
     width: 100%;
     padding: 0 10px;
   }
@@ -117,6 +117,7 @@
     cursor: pointer;
     width: 30px;
     height: 30px;
+    flex: none;
     background: $color-primary-light;
     justify-content: center;
     align-items: center;
